# general-optmization

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
data/: design_variable
example/Mesh_files/1D/: 1D.msh  meshio_parser_output
example/Mesh_files/2D/: 2D.geo  2D.msh  meshio_parser_output
example/tutorial1/CAD/: GeometryTutorial1.step
example/tutorial1/Mesh/: MeshTut1.msh  meshio_parser_output
non-linear-constrained-opt/: main.cpp
optimization_algorithm/: main.c
optimization_algorithm/constraint_function/: constraint_function.h
optimization_algorithm/input_output/: design_variable.c  design_variable.h  header.h  helper.h  input_output.c  input_output.h  io.c  io.h
optimization_algorithm/merit_function/: merit_function.c  merit_function.h
tools/: make_vtu.py
